# BookDock

./: .env.example  .gitignore  .npmrc  Dockerfile.server  Dockerfile.tts  README.md  VERIFICATION.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/dist-electron/: main.js  preload.cjs  preload.mjs
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: FileBrowser.tsx  TTSControls.tsx
apps/desktop/src/hooks/: useDesktopCommands.ts
apps/desktop/src/screens/: AdminUsersScreen.tsx  Library.tsx  MemberBenefitsScreen.tsx  MemberDetailScreen.tsx  MemberLoginScreen.tsx  MemberPaymentSuccessScreen.tsx  Reader.tsx  Settings.tsx  SourceManageScreen.tsx
apps/desktop/src/stores/: desktopStore.ts
apps/mobile/: README.md  app.json  index.js  metro.config.js  package.json  tsconfig.json
apps/mobile/src/: App.tsx
apps/mobile/src/navigation/: MainTabNavigator.tsx  RootNavigator.tsx  index.ts  types.ts
apps/server/: package.json  tsconfig.json
apps/server/prisma/: schema.prisma
apps/server/src/: app.module.ts  health.controller.ts  main.ts
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/web/public/: manifest.json  offline.html  sw.js
apps/web/src/: App.tsx  index.css  main.tsx
docs/: API.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DEPLOY.md  MARKET_ANALYSIS.md  PRD.md  QUICK_START.md  USER_GUIDE.md  USER_RESEARCH.md
nginx/: nginx.conf
nginx/conf.d/: server.conf
scripts/: init-db.sql
tts-service/: tts_service.py
(+86 files in other folders)
