[package]
name = "bookdock-desktop"
version = "0.1.0"
description = "BookDock Desktop App"
authors = ["BookDock Team"]
license = "MIT"
repository = "https://github.com/mmdctjj/BookDock"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "path-all", "notification-all", "global-shortcut-all", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
