[package]
name = "bookdock-desktop"
version = "0.1.0"
description = "BookDock Desktop App - E-book reader for NAS users"
authors = ["BookDock Team"]
license = "MIT"
repository = "https://github.com/mmdctjj/BookDock"
edition = "2021"

[lib]
name = "bookdock_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "2"
pdf = "0.8"
walkdir = "2"
dirs = "5"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
